<resources>
    <string name="app_name">TestApp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="medications">Enter Medications</string>
    <string name="dosageText">Enter Dosage (mg)</string>
    <string name="sendButton">Send</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="emailTextField">Email</string>
    <string name="passwordTextField">Password</string>
    <string name="signInButton">Sign In</string>
    <string name="createAccountButton">Create Account</string>
    <string name="StopButton">Stop</string>
    <string name="title_activity_notification_screen">NotificationScreen</string>
    <string name="notificationText">no notifications</string>
</resources>