<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".SignIn"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="signInClicked"
            android:text="@string/signInButton"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="createAccountClicked"
            android:text="@string/createAccountButton"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:autofillHints="@string/emailTextField"
            android:ems="10"
            android:hint="@string/emailTextField"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
            app:layout_constraintStart_toStartOf="@+id/passwordTextField"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:autofillHints="@string/passwordTextField"
            android:ems="10"
            android:hint="@string/passwordTextField"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>